--- a/css/style.css
+++ b/css/style.css
@@ -1,16 +1,40 @@
 h1 {
-  color:red;
+  color: #9cbdc6;
+  text-align: center;
 }
 h2 {
+  color: #969e9d;
   font-style: italic;
+  text-align: center;
+}
+h3 {
+  color: #969e9d;
+  font-family: sans-serif;
+  font-weight: 500;
   text-align: center;
 }
 
 p {
+  color: #969e9d;
   font-family: sans-serif;
+  text-align: center;
+}
+
+img{
+    align-items: center;
 }
 
 ul {
+  color: #969e9d;
+  font-family: sans-serif;
   font-size: 20px;
   line-height: 30px;
+  text-align: center;
+}
+ol {
+  color: #96939d;
+  font-family: sans-serif;
+  font-size: 20px;
+  line-height: 30px;
+  text-align: center;
 }
